[gd_scene load_steps=6 format=3 uid="uid://cbd0x5ticao6v"]

[ext_resource type="Script" uid="uid://ck4eegyiyje0a" path="res://examples/module2_nodes_and_scenes/M2_02_Common_Nodes_Example/common_nodes_demo.gd" id="1_abcde"]
[ext_resource type="Texture2D" uid="uid://cmy6cav3cj32r" path="res://icon.svg" id="2_fghij"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xxxxx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yyyyy"]
size = Vector2(600, 50)

[sub_resource type="CircleShape2D" id="CircleShape2D_zzzzz"]
radius = 32.0

[node name="common_nodes_demo" type="Node2D"]
script = ExtResource("1_abcde")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 113.0
offset_top = 15.0
offset_right = 413.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "常见节点演示"
horizontal_alignment = 1

[node name="TestButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "按我! (应用力/播放声音)"

[node name="TestTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SpriteExample" type="Sprite2D" parent="."]
position = Vector2(100, 150)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_fghij")

[node name="AnimatedSpriteExample" type="AnimatedSprite2D" parent="."]
position = Vector2(250, 150)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_xxxxx")
autoplay = "true"

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(300, 400)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource("RectangleShape2D_yyyyy")

[node name="ColorRect" type="ColorRect" parent="Ground"]
offset_left = -300.0
offset_top = -25.0
offset_right = 300.0
offset_bottom = 25.0
color = Color(0.5, 0.5, 0.5, 1)

[node name="Ball" type="RigidBody2D" parent="."]
position = Vector2(300, 100)

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_fghij")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("CircleShape2D_zzzzz")

[node name="SoundPlayer" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="TestTimer" to="." method="_on_TestTimer_timeout"]
